deploy/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: dev
    namespace: selections
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: selections-dev
    type: ClusterIP
- apiVersion: v1
  kind: Service
  metadata:
    name: prod
    namespace: selections
  spec:
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: selections-prod
    type: ClusterIP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
